--- a/practise Set2.html
+++ b/practise Set2.html
@@ -1,3 +1,7 @@
+//SAVE YOUR NAME IN A VARIABLE INSIDE SCRIPT TAG. DISPLAY NAME FROM THE VARIABLE ON THE PAGE
+
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,4 +17,5 @@
     
   </script>  
 </body>
+
 </html>
