--- a/practise Set2.html
+++ b/practise Set2.html
@@ -1,4 +1,4 @@
-//SAVE YOUR NAME IN A VARIABLE INSIDE SCRIPT TAG. DISPLAY NAME FROM THE VARIABLE ON THE PAGE
+//SAVE YOUR NAME IN A VARIABLE INSIDE SCRIPT TAG. DISPLAY NAME FROM THE VARIABLE ON THE PAGE. CALCULATE THE COST OF MYNTRA BAG AND KEEP IT IN VARIABLE.
 
 
 
@@ -19,3 +19,4 @@
 </body>
 
 </html>
+
