--- a/practise Set2.html
+++ b/practise Set2.html
@@ -1,4 +1,5 @@
-//SAVE YOUR NAME IN A VARIABLE INSIDE SCRIPT TAG. DISPLAY NAME FROM THE VARIABLE ON THE PAGE. CALCULATE THE COST OF MYNTRA BAG AND KEEP IT IN VARIABLE.
+//SAVE YOUR NAME IN A VARIABLE INSIDE SCRIPT TAG. DISPLAY NAME FROM THE VARIABLE ON THE PAGE. CALCULATE THE COST OF MYNTRA BAG AND KEEP IT IN VARIABLE.SHOW IT TO CONSOLE.
+KEEP GST PERCENTAGE AS CONSTANT
 
 
 
@@ -19,4 +20,5 @@
 </body>
 
 </html>
+
 
