--- a/practise Set2.html
+++ b/practise Set2.html
@@ -1,5 +1,5 @@
 //SAVE YOUR NAME IN A VARIABLE INSIDE SCRIPT TAG. DISPLAY NAME FROM THE VARIABLE ON THE PAGE. CALCULATE THE COST OF MYNTRA BAG AND KEEP IT IN VARIABLE.SHOW IT TO CONSOLE.
-KEEP GST PERCENTAGE AS CONSTANT 
+KEEP GST PERCENTAGE AS CONSTANT . USE EVAL METHOD FROM MATH TO CONVERT STRING CALCULATION INTO RESULT.
 
 
 
@@ -20,6 +20,7 @@ KEEP GST PERCENTAGE AS CONSTANT
 </body>
 
 </html>
+
 
 
 
