--- a/practise Set3/index.html
+++ b/practise Set3/index.html
@@ -1,3 +1,8 @@
+//Give discount based on age, gender for Metro Ticket
+
+
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -25,4 +30,5 @@
         
     </script>
 </body>
+
 </html>
