--- a/practise Set3/index.html
+++ b/practise Set3/index.html
@@ -1,6 +1,6 @@
 //Give discount based on age, gender for Metro Ticket
  -Females get 50% off
- -Kids 
+ -Kids under 5 years of age are free.
 
 
 
@@ -34,4 +34,5 @@
 </body>
 
 </html>
+
 
