--- a/practise Set3/index.html
+++ b/practise Set3/index.html
@@ -1,6 +1,7 @@
 //Give discount based on age, gender for Metro Ticket
  -Females get 50% off
  -Kids under 5 years of age are free.
+ -Kids up to 8 years have half ticket.
 
 
 
@@ -34,5 +35,6 @@
 </body>
 
 </html>
+
 
 
