--- a/practise Set3/index.html
+++ b/practise Set3/index.html
@@ -2,7 +2,7 @@
  -Females get 50% off
  -Kids under 5 years of age are free.
  -Kids up to 8 years have half ticket.
-
+ -People Over
 
 
 
@@ -35,6 +35,7 @@
 </body>
 
 </html>
+
 
 
 
