--- a/practise Set3/index.html
+++ b/practise Set3/index.html
@@ -1,5 +1,5 @@
 //Give discount based on age, gender for Metro Ticket
- -Females get 50% off
+ -Females get 50% off,
  -Kids under 5 years of age are free.
  -Kids up to 8 years have half ticket.
  -People Over 65 years of age only pay 30 % of the ticket.
@@ -36,6 +36,7 @@
 </body>
 
 </html>
+
 
 
 
