--- a/practise Set3/index.html
+++ b/practise Set3/index.html
@@ -1,7 +1,7 @@
 //Give discount based on age, gender for Metro Ticket
  -Females get 50% off,
  -Kids under 5 years of age are free,
- -Kids up to 8 years have half ticket.
+ -Kids up to 8 years have half ticket,
  -People Over 65 years of age only pay 30 % of the ticket.
  -In case of multiple discounts max discount will apply.
 
@@ -36,6 +36,7 @@
 </body>
 
 </html>
+
 
 
 
