--- a/practise Set4.html
+++ b/practise Set4.html
@@ -13,3 +13,10 @@
        }
  //console.log(isOdd(5));
        //console.log(isOdd(4));
+function largeNum (num1 , num2) {
+        if (num1 > num2) {
+            return num1;
+        } else {
+            return num2;
+        }
+       }
