practise Set4.html

--- a/practise Set4.html
+++ b/practise Set4.html
@@ -20,3 +20,6 @@ function largeNum (num1 , num2) {
             return num2;
         }
        }
+ //console.log(largeNum(5, 10));
+        // console.log(largeNum(10, 10));
+       // console.log(largeNum(5.5, 7.5));
