--- a/practise Set4.html
+++ b/practise Set4.html
@@ -23,3 +23,4 @@ function largeNum (num1 , num2) {
  //console.log(largeNum(5, 10));
         // console.log(largeNum(10, 10));
        // console.log(largeNum(5.5, 7.5));
+ function toFahrenheit(celsius) {
