--- a/practise Set4.html
+++ b/practise Set4.html
@@ -25,3 +25,7 @@ function largeNum (num1 , num2) {
        // console.log(largeNum(5.5, 7.5));
  function toFahrenheit(celsius) {
       let fahrenheit = (celsius * 9/5) + 32;
+      return fahrenheit;
+       }
+
+     
