practise Set4.html

--- a/practise Set4.html
+++ b/practise Set4.html
@@ -27,5 +27,5 @@ function largeNum (num1 , num2) {
       let fahrenheit = (celsius * 9/5) + 32;
       return fahrenheit;
        }
-
+ console.log(toFahrenheit(0));
      
