practise Set4.html

--- a/practise Set4.html
+++ b/practise Set4.html
@@ -28,4 +28,4 @@ function largeNum (num1 , num2) {
       return fahrenheit;
        }
  console.log(toFahrenheit(0));
-     
+console.log(toFahrenheit(100));     
